0404-1700 - MAJ README & source code formated / commented
Took 8 minutes

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,6 @@
 -->
 
 
-
 <!-- Définition du type de document et de la langue -->
 <!DOCTYPE html>
 <html lang="fr">
@@ -56,7 +55,8 @@
 
     <!-- En-tête de la page contenant un titre et un sous titre-->
     <!-- Elements : title /  subtitle -->
-    <a href="./index.html"><h1 class="header__title">Sophie Bluel <span class="header__subtitle">Architecte d'intérieur</span></h1></a>
+    <a href="./index.html"><h1 class="header__title">Sophie Bluel <span
+            class="header__subtitle">Architecte d'intérieur</span></h1></a>
 
     <!-- Navigation principale -->
     <!-- Element : nav -->
@@ -71,7 +71,9 @@
             <li class="nav-list__item"><a href=#>contact</a></li>
             <!-- Modifier : active -->
             <li class="nav-list__item nav-list__item--active"><a href="./login.html">login</a></li>
-            <li class="nav-list__item"><a href="https://instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram" class="nav-list__item--img"></a></li>
+            <li class="nav-list__item"><a href="https://instagram.com"><img src="./assets/icons/instagram.png"
+                                                                            alt="Instagram" class="nav-list__item--img"></a>
+            </li>
 
         </ul>
 
