--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -279,7 +279,7 @@
                 <!-- E-mail -->
                 <label for="email" class="contact__form--label form__label">Email</label>
                 <input type="email" name="email" id="email" class="contact__form--input" autocomplete="on"
-                       placeholder="Votre e-mail">
+                       placeholder="Votre e-mail" required>
 
                 <!-- Mesdeletesage -->
                 <label for="message" class="contact__form--label form__label">Message</label>
